# project_orange

./: README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters_model_generation.yml  parameters_model_predictions.yml  parameters_model_preprocessing.yml
src/project_orange/: __init__.py  __main__.py  settings.py
src/project_orange/datasets/: athena_dataset.py
src/project_orange/pipelines/data_schemas/: data_schemas.py
src/project_orange/pipelines/model_generation/: __init__.py  nodes.py  pipeline.py
src/project_orange/pipelines/model_predictions/: __init__.py  nodes.py  pipeline.py
src/project_orange/pipelines/model_preprocessing/: __init__.py  nodes.py  pipeline.py
tests/pipelines/model_generation/: test_pipeline.py
tests/pipelines/model_predictions/: test_pipeline.py
tests/pipelines/model_preprocessing/: test_pipeline.py
